--- a/index.html
+++ b/index.html
@@ -154,11 +154,16 @@
     </section>
   <footer>
     <div class="footer">
-      <!-- <ul>
+        <ul>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">X</a></li>
+            <li><a href="#">LinkedIn</a></li>
+          </ul>
+      <ul>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul> -->
+      </ul>
       <p>Created by Neeraj Meena, Full Stack Developer</p>
     </div>
   </footer>
