--- a/sign-up.html
+++ b/sign-up.html
@@ -67,6 +67,11 @@
 
   <footer>
     <div class="footer">
+        <ul>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">X</a></li>
+            <li><a href="#">LinkedIn</a></li>
+          </ul>
       <ul>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms of Service</a></li>
