--- a/login.html
+++ b/login.html
@@ -55,9 +55,12 @@
   <footer>
     <div class="footer">
         <ul>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">X</a></li>
-            <li><a href="#">LinkedIn</a></li>
+          <li><a href="#">Github</a></li>
+          <li><a href="#">X</a></li>
+          <li><a href="#">LinkedIn</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Email</a></li>
           </ul>
       <ul>
         <li><a href="#">Privacy Policy</a></li>
