--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
             <li><a href="#">Github</a></li>
             <li><a href="#">X</a></li>
             <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Email</a></li>
           </ul>
       <ul>
         <li><a href="#">Home</a></li>
