--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
         </div>
       </div>
     </section>
+  <!-- footer  (TODO: fill out the URLs)-->
   <footer>
     <div class="footer">
+        <!-- contact us-->
         <ul>
             <li><a href="#">Github</a></li>
             <li><a href="#">X</a></li>
@@ -162,6 +164,7 @@
             <li><a href="#">Facebook</a></li>
             <li><a href="#">Email</a></li>
           </ul>
+          <!-- imp links -->
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Privacy Policy</a></li>
