--- a/sign-up.html
+++ b/sign-up.html
@@ -64,17 +64,19 @@
           <button type="submit">Submit</button>
         </form>
       </div>
-
+  <!-- footer  (TODO: fill out the URLs)-->
   <footer>
     <div class="footer">
+        <!-- contact us-->
         <ul>
-          <li><a href="#">Github</a></li>
-          <li><a href="#">X</a></li>
-          <li><a href="#">LinkedIn</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Email</a></li>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">X</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Email</a></li>
           </ul>
+          <!-- imp links -->
       <ul>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms of Service</a></li>
