--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/x-icon" href="./favicon_io/android-chrome-512x512.png" sizes="64x64">
+  <link rel="icon" type="image/x-icon" href="./android-chrome-512x512.png" sizes="64x64">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./sign-up.css">
@@ -69,18 +69,42 @@
     <div class="footer">
         <!-- contact us-->
         <ul>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">X</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Email</a></li>
-          </ul>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/github.png"
+            alt="github"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/x.png"
+            alt="X"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/linkedin.png"
+            alt="LinkedIn"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/instagram.png"
+            alt="Instagram"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/facebook.png"
+            alt="Facebook"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/email.png"
+            alt="Email"/>
+          </a></li>
+        </ul>
           <!-- imp links -->
       <ul>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Contact Us</a></li>
       </ul>
     </div>
   </footer>
