--- a/index.html
+++ b/index.html
@@ -157,13 +157,43 @@
     <div class="footer">
         <!-- contact us-->
         <ul>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">X</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Email</a></li>
-          </ul>
+          <li><a href="#">
+            <img
+            src="./social/github.png"
+            class="social-icon"
+            alt="github"/>
+          </a></li>
+          <li><a href="#">
+            <img
+            src="./social/x.png"
+            class="social-icon"
+            alt="X"/>
+          </a></li>
+          <li><a href="#">
+            <img
+            src="./social/linkedin.png"
+            class="social-icon"
+            alt="LinkedIn"/>
+          </a></li>
+          <li><a href="#">
+            <img
+            src="./social/instagram.png"
+            class="social-icon"
+            alt="Instagram"/>
+          </a></li>
+          <li><a href="#">
+            <img
+            src="./social/facebook.png"
+            class="social-icon"
+            alt="Facebook"/>
+          </a></li>
+          <li><a href="#">
+            <img
+            src="./social/email.png"
+            class="social-icon"
+            alt="Email"/>
+          </a></li>
+        </ul>
           <!-- imp links -->
       <ul>
         <li><a href="#">Home</a></li>
