--- a/login.html
+++ b/login.html
@@ -56,18 +56,42 @@
     <div class="footer">
         <!-- contact us-->
         <ul>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">X</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Email</a></li>
-          </ul>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/github.png"
+            alt="github"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/x.png"
+            alt="X"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/linkedin.png"
+            alt="LinkedIn"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/instagram.png"
+            alt="Instagram"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/facebook.png"
+            alt="Facebook"/>
+          </a></li>
+          <li><a href="#">
+            <img id="social-icon"
+            src="./social/email.png"
+            alt="Email"/>
+          </a></li>
+        </ul>
           <!-- imp links -->
       <ul>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Contact Us</a></li>
       </ul>
     </div>
   </footer>
