--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="content">
                 <h1 class="under-welcome-h1">Take Control of Your Finances</h1>
                 <div class="under-h1"></div>
-                <p class="under-welcome-p">Track your income and expenses effortlessly. Manage your budget, set financial goals, and make smarter decisions for a more secure future.</p>
+                <p class="under-welcome-p">Track your income and expenses effortlessly. Manage your budget, set financial goals, and make smarter decisions for more secure future.</p>
                 <button class="under-welcome-btn">Sign Up Now</button>
             </div>
             <div class="under-welcome-image">
