--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <li><a href="#">Terms of Service</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul> -->
-      <p>Created by Neeraj Meena, Full Stack Developer</p>
+      <p>Created by Neeraj Meena, Full Stack MERN Developer</p>
     </div>
   </footer>
   <script>feather.replace();</script>
