created a support page

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           <li><a href="#">Home</a></li>
           <li><a href="#tracker">Use Tracker</a></li>
           <li><a href="#how-it-works">How it works</a></li>
-          <li><a href="#">Support</a></li>
+          <li><a href="./support.html">Support</a></li>
         </ul>
         <div class="buttons">
           <a href="./login.html" class="btn-head"
             ><i class="fas fa-sign-in-alt"></i> Log In</a
           >
           <a href="./sign-up.html" class="btn-head"
-            ><i class="fas fa-user-plus"></i> Sign Up</a
-          >
+            ><i class="fas fa-user-plus"></i> Sign Up</a>
+          
         </div>
         <!-- <div class="menu-toggle">
             <i class="fas fa-bars"></i>
