updated button css

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </ul>
         <div class="buttons">
           <a href="./login.html" class="btn-head"
-            ><i class="fas fa-sign-in-alt"></i> Log In</a
+            ><i class="fas fa-sign-in-alt" style="border: 0px;"></i> Log In</a
           >
           <a href="./sign-up.html" class="btn-head"
-            ><i class="fas fa-user-plus"></i> Sign Up</a>
+            ><i class="fas fa-user-plus" style="border: 0px;"></i> Sign Up</a>
           
         </div>
         <!-- <div class="menu-toggle">
