--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav>
       <div class="navbar">
         <a href="#" class="logo"
-          ><i class="fas fa-chart-line"></i> Finance Tracker</a
+          ><i class="fas fa-chart-line"></i> Finance Tractor</a
         >
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
