--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@
           <li><a href="#">Support</a></li> -->
         </ul>
         <div class="buttons">
-          <a href="./login.html" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
+          <a href="https://finance542.netlify.app/" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
           
         </div>
         <!-- <div class="menu-toggle">
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="container">
-        <form class="signup-form" action="/signup" method="post">
+        <form class="signup-form" action="https://finance542.netlify.app/" method="post">
           <h2>Sign Up</h2>
           <div class="form-group">
             <label for="fullname">Full Name <span>*</span></label>
