feat: enhance button-finance styles, improved hover effects, and updated text contrast

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <li><a href="./support.html">Support</a></li>
         </ul>
         <div class="buttons">
-          <a href="./login.html" class="btn-head"
-            ><i class="fas fa-sign-in-alt"></i> Log In</a
+          <a href="./login.html" class="btn-head button-nav"
+            ><i class="fas fa-sign-in-alt  "></i> Log In</a
           >
-          <a href="./sign-up.html" class="btn-head"
-            ><i class="fas fa-user-plus"></i> Sign Up</a>
+          <a href="./sign-up.html" class="btn-head button-nav "
+            ><i class="fas fa-user-plus  "></i> Sign Up</a>
           
         </div>
         <!-- <div class="menu-toggle">
@@ -62,7 +62,7 @@
             Track your income and expenses effortlessly. Manage your budget, set
             financial goals, and make smarter decisions for more secure future.
           </p>
-          <button class="under-welcome-btn">Sign Up Now</button>
+          <button class="under-welcome-btn button-signup">Sign Up Now</button>
         </div>
         <div class="under-welcome-image">
           <img src="./assets/makeme.png" alt="Power Finance" />
@@ -112,8 +112,8 @@
             <option value="income">Income</option>
             <option value="expense">Expense</option>
           </select>
-          <button onclick="addTransaction()">Add Transaction</button>
-          <button onclick="handleDownload()">Export</button>
+          <button onclick="addTransaction()" class="button-finance">Add Transaction</button>
+          <button onclick="handleDownload()" class="button-finance">Export</button>
         </div>
         <div class="table-part" id="table-part">
           <table id="transaction-table">
@@ -168,7 +168,7 @@
               <span>Secure data protection</span>
             </li>
           </ul>
-          <button class="sign-up-button-btn">Sign Up Now</button>
+          <button class="sign-up-button-btn button-signup">Sign Up Now</button>
         </div>
         <div class="right-working-image">
           <!-- <div class="under-welcome-image"> -->
