--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
           <!-- <li><a href="#how-it-works">How it works</a></li>
           <li><a href="#">Support</a></li> -->
         </ul>
-        <div class="buttons">
+        <div class="buttons button-nav">
           
           <a href="./sign-up.html" class="btn-head"><i class="fas fa-user-plus"></i> Sign Up</a>
         </div>
@@ -48,7 +48,7 @@
           <div class="form-group">
             <a href="/forgot-password">Forgot Password?</a>
           </div>
-          <button type="submit">Login</button>
+          <button type="submit" class="button-submission">Login</button>
         </form>
       </div>
 
