--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
           <!-- <li><a href="#how-it-works">How it works</a></li>
           <li><a href="#">Support</a></li> -->
         </ul>
-        <div class="buttons">
+        <div class="buttons button-nav">
           <a href="https://finance542.netlify.app/" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
           
         </div>
@@ -61,7 +61,7 @@
             <label for="confirm-password">Confirm Password <span>*</span></label>
             <input type="password" id="confirm-password" name="confirm-password" required>
           </div>
-          <button type="submit">Submit</button>
+          <button type="submit" class="button-submission">Submit</button>
         </form>
       </div>
 
