--- a/support.html
+++ b/support.html
@@ -16,11 +16,11 @@
   <!-- <header class="header-part"> -->
     <nav>
       <div class="navbar">
-        <a href="#" class="logo"
+        <a href="./index.html" class="logo"
           ><i class="fas fa-chart-line"></i> Finance Tracker</a
         >
         <ul class="nav-links">
-          <li><a href="#">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="#tracker">Use Tracker</a></li>
           <li><a href="#how-it-works">How it works</a></li>
           <li><a href="./support.html">Support</a></li>
