fixed issue where login button on signup page doesn't navigate to login page but instead an alternate link

--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@
           <li><a href="#">Support</a></li> -->
         </ul>
         <div class="buttons">
-          <a href="https://finance542.netlify.app/" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
+          <a href="./login.html" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
           
         </div>
         <!-- <div class="menu-toggle">
