gave images different alt text and made the alt text more descriptive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <button class="under-welcome-btn">Sign Up Now</button>
         </div>
         <div class="under-welcome-image">
-          <img src="./assets/makeme.png" alt="Power Finance" />
+          <img src="./assets/makeme.png" alt="Graphic of clipboard with checkmarks and a bar graph. Beside the clipboard are a calculator, a wallet with dollar bills flying out of it, coins and a pie chart. Behind the clipboard is a zigzag arrow pointing upwards." />
         </div>
       </div>
     </section>
@@ -175,7 +175,7 @@
           <img
             src="./assets/how-it-works.png"
             target="_self"
-            alt="Power Finance"
+            alt="A laptop with a bar graph pertruding from the keys. Beside the computer are an application window with white boxes behind it, a page with an image and text, arrows pointing up, some coins, a phone, a calculator, a wallet and two credit cards."
           />
           <!-- </div> -->
         </div>
