Added working links between the support page and the Use Tracker and How it works buttons

--- a/support.html
+++ b/support.html
@@ -21,8 +21,8 @@
         >
         <ul class="nav-links">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="#tracker">Use Tracker</a></li>
-          <li><a href="#how-it-works">How it works</a></li>
+          <li><a href="index.html#tracker">Use Tracker</a></li>
+          <li><a href="index.html#how-it-works">How it works</a></li>
           <li><a href="./support.html">Support</a></li>
         </ul>
         <div class="buttons">
