minimal footer design

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
     </section>
 
     <footer>
-      <div class="footer">
-        <!-- <ul>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul> -->
-        <p>Created by Neeraj Meena, Full Stack MERN Developer</p>
-      </div>
+    <div class="footer">
+    <p>© 2025 Personal Finance Tracker</p>
+    <ul>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Terms of Service</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+    </div>
     </footer>
     <script>
       feather.replace();
