--- a/support.html
+++ b/support.html
@@ -64,6 +64,7 @@
 
 <footer>
   <div class="footer">
+    <p>© 2025 Personal Finance Tracker</p>
     <ul>
       <li><a href="#">Privacy Policy</a></li>
       <li><a href="#">Terms of Service</a></li>
