--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#tracker">Use Tracker</a></li>
           <li><a href="#how-it-works">How it works</a></li>
-          <li><a href="#invite">Community</a></li>
+          <li><a href="./community.html">Community</a></li>
           <li><a href="./support.html">Support</a></li>
         </ul>
         <div class="buttons">
