--- a/sign-up.html
+++ b/sign-up.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./favicon_io/android-chrome-512x512.png"
+      sizes="64x64"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./sign-up.css" />
+    <link rel="stylesheet" href="search.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.css"
+    />
+    <script src="https://unpkg.com/feather-icons"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <title>Finance Tracker - A Personal Finance App</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" type="image/x-icon" href="./favicon_io/android-chrome-512x512.png" sizes="64x64">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./sign-up.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.css">
-  <script src="https://unpkg.com/feather-icons"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>Finance Tracker - A Personal Finance App</title>
-</head>   
-
-<body>
-  <!-- <header class="header-part"> -->
+  <body>
+    <!-- <header class="header-part"> -->
     <nav>
       <div class="navbar">
-        <a href="#" class="logo"><i class="fas fa-chart-line"></i> Finance Tracker</a>
+        <a href="#" class="logo"
+          ><i class="fas fa-chart-line"></i> Finance Tracker</a
+        >
         <ul class="nav-links">
           <li><a href="./index.html">Home</a></li>
           <!-- <li><a href="">Use Tracker</a></li> -->
           <!-- <li><a href="#how-it-works">How it works</a></li>
           <li><a href="#">Support</a></li> -->
         </ul>
+        <div class="search-container">
+          <i class="fas fa-search search-icon"></i>
+          <input
+            type="text"
+            class="search-input"
+            id="search-input"
+            placeholder="Search"
+          />
+          <div class="shortcut-keys">
+            <span class="shortcut-key">⌘</span>
+            <span class="shortcut-key">K</span>
+          </div>
+        </div>
         <div class="buttons">
-          <a href="https://finance542.netlify.app/" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
-          
+          <a href="https://finance542.netlify.app/" class="btn-head"
+            ><i class="fas fa-sign-in-alt"></i> Log In</a
+          >
         </div>
         <!-- <div class="menu-toggle">
             <i class="fas fa-bars"></i>
@@ -35,48 +62,61 @@
     </nav>
 
     <div class="container">
-        <form class="signup-form" action="https://finance542.netlify.app/" method="post">
-          <h2>Sign Up</h2>
-          <div class="form-group">
-            <label for="fullname">Full Name <span>*</span></label>
-            <input type="text" id="fullname" name="fullname" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Email Address <span>*</span></label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <div class="form-group">
-            <label for="mobile">Mobile Number <span>*</span></label>
-            <input type="tel" id="mobile" name="mobile" required>
-          </div>
-          <!-- <div class="form-group">
+      <form
+        class="signup-form"
+        action="https://finance542.netlify.app/"
+        method="post"
+      >
+        <h2>Sign Up</h2>
+        <div class="form-group">
+          <label for="fullname">Full Name <span>*</span></label>
+          <input type="text" id="fullname" name="fullname" required />
+        </div>
+        <div class="form-group">
+          <label for="email">Email Address <span>*</span></label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div class="form-group">
+          <label for="mobile">Mobile Number <span>*</span></label>
+          <input type="tel" id="mobile" name="mobile" required />
+        </div>
+        <!-- <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
           </div> -->
-          <div class="form-group">
-            <label for="password">Password </label>
-            <input type="password" id="password" name="password" required>
-          </div>
-          <div class="form-group">
-            <label for="confirm-password">Confirm Password <span>*</span></label>
-            <input type="password" id="confirm-password" name="confirm-password" required>
-          </div>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-
-  <footer>
-    <div class="footer">
-      <ul>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
+        <div class="form-group">
+          <label for="password">Password </label>
+          <input type="password" id="password" name="password" required />
+        </div>
+        <div class="form-group">
+          <label for="confirm-password">Confirm Password <span>*</span></label>
+          <input
+            type="password"
+            id="confirm-password"
+            name="confirm-password"
+            required
+          />
+        </div>
+        <button type="submit">Submit</button>
+      </form>
     </div>
-  </footer>
-  <script>feather.replace();</script>
-  <script src="script.js"></script>
-  <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
-</body>
 
+    <footer>
+      <div class="footer">
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </footer>
+    <script>
+      feather.replace();
+    </script>
+    <script src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/your-font-awesome-kit.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
