feat(theme): add global dark mode and navbar toggle with persistence

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         </div>
         
         <div class="buttons">
+          <button id="theme-toggle" class="btn-head" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i>
+          </button>
           <a href="./login.html" class="btn-head"
             ><i class="fas fa-sign-in-alt"></i> Log In</a
           >
@@ -88,7 +91,7 @@
     </section>
     <br />
     <div class="arrow">
-      <a href="#tracker " class="scroll-link">
+      <a href="#tracker" class="scroll-link">
         <!-- <span></span> -->
         <!-- <span></span> -->
         <span></span>
