--- a/login.html
+++ b/login.html
@@ -25,6 +25,9 @@
           <li><a href="#">Support</a></li> -->
         </ul>
         <div class="buttons">
+          <button id="theme-toggle" class="btn-head" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i>
+          </button>
           
           <a href="./sign-up.html" class="btn-head"><i class="fas fa-user-plus"></i> Sign Up</a>
         </div>
