--- a/sign-up.html
+++ b/sign-up.html
@@ -25,6 +25,9 @@
           <li><a href="#">Support</a></li> -->
         </ul>
         <div class="buttons">
+          <button id="theme-toggle" class="btn-head" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i>
+          </button>
           <a href="https://finance542.netlify.app/" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
           
         </div>
