feat: implement comprehensive dark mode functionality - Add clean dark-mode.js file for theme toggle functionality, keeping the script.js intact

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </div>
         
         <div class="buttons">
+          <button id="theme-toggle" class="btn-head" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i>
+          </button>
           <a href="./login.html" class="btn-head"
             ><i class="fas fa-sign-in-alt"></i> Log In</a
           >
@@ -296,6 +299,7 @@
     <script>
       feather.replace();
     </script>
+    <script src="dark-mode.js"></script>
     <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/your-font-awesome-kit.js"
