--- a/sign-up.html
+++ b/sign-up.html
@@ -42,6 +42,9 @@
         </div>
         
         <div class="buttons">
+          <button id="theme-toggle" class="btn-head" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i>
+          </button>
           <a href="./login.html" class="btn-head"><i class="fas fa-sign-in-alt"></i> Log In</a>
           <a href="./sign-up.html" class="btn-head"><i class="fas fa-user-plus"></i> Sign Up</a>
         </div>
@@ -232,6 +235,7 @@
     </div>
   </footer>
   <script>feather.replace();</script>
+  <script src="dark-mode.js"></script>
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
