feat: add Features section and navbar link (#39)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <ul class="nav-links">
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#tracker">Use Tracker</a></li>
+          <li><a href="#features">Features</a></li>
           <li><a href="#how-it-works">How it works</a></li>
           <li><a href="#invite">Community</a></li>
           <li><a href="./support.html">Support</a></li>
@@ -143,6 +144,40 @@
         </div>
       </div>
     </section>
+<!-- Features Section -->
+<section id="features" class="features-section">
+  <div class="head-text">
+    <h1>Features</h1>
+    <div class="under-head-text"></div>
+  </div>
+  <br />
+
+  <div class="features-grid">
+    <div class="feature-card">
+      <i data-feather="trending-up"></i>
+      <h3>Income & Expense Tracking</h3>
+      <p>Track your transactions and see real-time balance updates.</p>
+    </div>
+
+    <div class="feature-card">
+      <i data-feather="target"></i>
+      <h3>Budgets & Goals</h3>
+      <p>Set monthly budgets and track savings goals easily.</p>
+    </div>
+
+    <div class="feature-card">
+      <i data-feather="pie-chart"></i>
+      <h3>Reports & Charts</h3>
+      <p>Visualize your spending patterns with charts.</p>
+    </div>
+
+    <div class="feature-card">
+      <i data-feather="shield"></i>
+      <h3>Secure Data</h3>
+      <p>Protect your personal financial information securely.</p>
+      </div>
+    </div>
+   </section>
 
     <section class="how-it-works" id="how-it-works">
       <div class="head-text">
