Fix: Correct footer GitHub icon link to repository

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               Manage your income, expenses, and financial goals effortlessly.
             </p>
             <div class="social-links">
-              <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/neeraj542/Personal-Finance-Tracker" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-github"></i></a>
               <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
               <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
               <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
